# QASMInfer

./: .gitignore  README.md  _CoqProject  dune-project  extract.zsh  readme.md  readme.txt  summary.md
core/: _CoqProject  proof.md
core/src/: Complex.v  Density.v  Extract.v  Hermitian.v  Matrix.v  MatrixVector.v  MqOperator.v  Operator.v  Physics.v  Positive.v  Program.v  Projection.v  SqOperator.v  Tensor.v  Unitary.v  Util.v  Vector.v
core/src/opemqasm/: AST.v  Desugar.v
core/src/util/: RingUtil.v  Util.v  util.v
doc/: proof.tex
doc/evaluation/: evaluation.tex
doc/proof/: proof.tex
doc/related_work/: related_work.out  related_work.tex
doc/teleport/: teleport.tex
qasm/: dune-project  install.sh  qasmcore_result_wrong.txt
qasm/lib/: dune  quantum_core.ml  quantum_core.mli
qasm/lib/core/: dune  quantum_core.ml  quantum_core.mli
qasm/test/: dune  qasm.ml
scripts/: patch_extraction.sh
src/: Complex.v  Density.v  Matrix.v  Operator.v  Physics.v  Qubit.v  Real.v  Tensor.v  Util.v
src/coq/: Complex.v  Density.v  Extract.v  Operator.v  Physics.v  Tensor.v
src/lib/: dune
src/ocaml/: core.ml  core.mli
test/: Cnottest.v  Swaptest.v
test/coq/: Swaptest.v
theories/: dune
theories/extract/: Extract.v  extraction_header.txt
theories/matrix/: All.v  Complex.v  Matrix.v  MatrixVector.v  RingUtil.v  Tensor.v  Vector.v
theories/operator/: All.v  Density.v  Multiple.v  Projection.v  Single.v  Standard.v
theories/program/: Program.v
theories/property/: All.v  Hermitian.v  Positive.v  Unitary.v
theories/util/: All.v  Util.v
(+32 files in other folders)
