(include_subdirs qualified)

(coq.theory
 (name QASMInfer)
 (package qasminfer)
 (theories Stdlib)
 (modules :standard))

(rule
 (alias extract)
 (targets extracted.ml)
 (deps
  extract/Extract.v
  program/Program.vo
  matrix/Complex.vo
  (source_tree .)
  (:patcher ../scripts/patch_extraction.sh)
  (:header_txt extract/extraction_header.txt))
 (action
  (chdir %{workspace_root}/_build/default/theories
   (progn
    (run %{bin:coqtop} -q -Q . QASMInfer -batch -l extract/Extract)
    (run %{patcher} %{header_txt} extracted.ml)))))
